--- a/index.html
+++ b/index.html
@@ -12,65 +12,62 @@
 
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg fixed-top">
+  <body>
+    <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
-          <a class="navbar-brand text-white" href="#">
-           <div class="log">Happy Holi By Prashant Yadav</div>
-          </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-   
-      <div class="collapse navbar-collapse" >
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="btn btn-light" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-          <li class="nav-item">
+        <a class="navbar-brand text-white" href="#">
+          <div class="log">Happy Holi By Prashant Yadav</div>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="btn btn-light" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#">About</a>
             </li>
-           
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              More
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
-        
-      </div>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                More
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
-
+  
     <div class="myinfo">
       <h1 class="holi">Hey there!</h1>
       <h1 class="py">I am Prashant</h1>
-          <!-- <h2 class="hue">Happy Holi!</h2> -->
-          <h4 class="hue">Wishing you and your loved ones a very colourful Holi<br>May you forget all your worries and enjoy this day to the fullest.<br> </h4>
-      </div>
-
-      <video autoplay loop play-inline muted  >
-          <source src="Holi.mp4">
-              video is not load
-          </video>
-
-          <div class="audio-player">
-            <audio id="bgAudio" loop autoplay>
-              <source src="song.mp3" type="audio/mpeg">
-              Your browser does not support the audio element.
-            </audio>
-            <button id="playPauseButton"><i class="fas fa-volume-up"></i></button>
-            <script src="script.js"></script>
-          </div>
-</body>
-
+      <h4 class="hue">Wishing you and your loved ones a very colourful Holi<br>May you forget all your worries and enjoy this day to the fullest.<br> </h4>
+    </div>
+  
+    <video autoplay loop playsinline muted class="responsive-video">
+      <source src="Holi.mp4">
+      video is not load
+    </video>
+  
+    <div class="audio-player">
+      <audio id="bgAudio" loop autoplay>
+        <source src="song.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+      <button id="playPauseButton"><i class="fas fa-volume-up"></i></button>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
 
 
